log
Fri 12 May 2023 06:09:43 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:19: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   22 |   if(!pq -> size) return;
      |                   ^~~~~~
heap.c:20:7: note: declared here
   20 | void* heap_top(Heap* pq)
      |       ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1269447
Fri 12 May 2023 06:10:24 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:24:25: error: ‘pq->heapArray’ is a pointer; did you mean to use ‘->’?
   24 |   return pq -> heapArray.data;
      |                         ^
      |                         ->
heap.c:25:1: error: control reaches end of non-void function [-Werror=return-type]
   25 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ecb3c35
